--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electron App</title>
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            user-select: none;
+    </style>
 </head>
 <body>
-    Hellow Electron
+    Hello Electron 
 </body>
 </html>
